# ingredient_regex_engine

./: README.md  pyproject.toml  readme.md  requirements-dev.txt  settings.py
.github/workflows/: ci.yml
examples/: quickstart.ipynb  quickstart_demo.ipynb  regex_engine.db
examples/output/: categorized_ingredients.json
examples/output/regexes/: ingredient_name.json  unit.json  unit_size.json
src/regex_engine/: __init__.py  api.py  config.py
src/regex_engine/adapters/categorizer/: agent_categorizer.py  agent_categorizer_client.py  categorizer_service_default.py  categorizing_vote.py
src/regex_engine/adapters/input_adapters/: input_router.py  pandas_input_adapter.py  string_input_adapter.py  string_iterable_input_adapter.py  types.py
src/regex_engine/adapters/parser/: demo_parser.py
src/regex_engine/application/dto/: analysed_phrase.py  generated_word.py  word_analysis.py
src/regex_engine/application/use_cases/: amount_extractor_default.py  ingredient_learning_engine.py  ingredient_regex_engine.py  ingredient_regex_engine_demo.py  (+4 more)
src/regex_engine/bootstrap/: bootstap_demo.py  bootstrap.py
src/regex_engine/domain/: enums.py  errors.py
src/regex_engine/ports/: amount_extractor.py  categories_repository.py  categorizer.py  categorizer_service.py  ingredient_parser.py  ingredient_regex_engine.py  input_adapter.py  learing_rules.py  learning_engine.py  morfeusz.py  regex_orchestrator.py  regex_registry.py  regex_resolver.py  regex_service.py  token_normalizer.py
tests/live/: conftest.py  test_agent_categorizing.py  test_agent_real_parsing.py
(+51 files in other folders)
