[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-engine"
version = "0.1.0"
description = "A library enabling the standardisation of food ingredient lists"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.12.2",
    "openai-agents>=0.2.0",
    "python-dotenv==1.2.2",
    "morfeusz2>=1.99",
    "pandas",
    "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=regex_engine --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["regex_engine"]
branch = true

[tool.coverage.report]
omit = [
    "tests/*",
    "*/__init__.py",
]
show_missing = true